[Ananya] : Implemented EduLearn is a scalable, secure, and modular Learning Management System built using a microservices architecture.